Revert "[Gradle|Exec] fix: deduplicate, merge and set up JVM args from BuildEnvironment, gradle.properties and user settings"
This reverts commit ef9bd6dac2a2a1a1ea2a378d96c83972066a93cd.

GitOrigin-RevId: f6454b11d37ef76aea091006ad9855ee6cc2f893